--- a/Psych/index.html
+++ b/Psych/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-
+<html>
+<head>
 <title>psych</title>
 <link rel="stylesheet" type ="text/css" href="psych.css"/>
-
+</head>
 <body>
+    <script src="anime.min.js"></script>
+    <script src="howler/dist/howler.js"></script>
+    <script src="psych.js"></script>
     <!-- <audio loop="loop" autoplay="autoplay">
         <source src="audio/Plantasia.mp3" type="audio/mpeg" />
     </audio> -->
@@ -13,7 +17,7 @@
             <!-- <img class= 'dog' src="Images/figma/animal.png"> -->
     </div>
     <div class="next2">
-        <button class="cake"><img src="Images/figma/food.png"></button>
+        <button class="cake" onclick="cakeClick()"><img src="Images/figma/food.png"></button>
         <!-- <img class="cake" src="Images/figma/food.png"> -->
     </div>
     <div class="middle">
@@ -21,6 +25,4 @@
     </div>
     <canvas class="spores"></canvas>
 </body>
-<script src="anime.min.js"></script>
-<script src="howler/dist/howler.js"></script>
-<script src="psych.js"></script>
+</html>
