howler song cycling

--- a/Psych/index.html
+++ b/Psych/index.html
@@ -21,7 +21,8 @@
         <!-- <img class="cake" src="Images/figma/food.png"> -->
     </div>
     <div class="middle">
-        <img class="logo" src="Images/figma/mushy.png">
+        <button class="logo" onclick="logoClick()"><img src="Images/figma/mushy.png"></button>
+        <!-- <img class="logo" src="Images/figma/mushy.png"> -->
     </div>
     <canvas class="spores"></canvas>
 </body>
