--- a/Psych/index.html
+++ b/Psych/index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" type ="text/css" href="psych.css"/>
 </head>
 <body>
-    <script src="anime.min.js"></script>
+    <!-- <script src="anime.min.js"></script>
     <script src="howler/dist/howler.js"></script>
-    <script src="psych.js"></script>
+    <script src="psych.js"></script> -->
     <!-- <audio loop="loop" autoplay="autoplay">
         <source src="audio/Plantasia.mp3" type="audio/mpeg" />
     </audio> -->
@@ -25,5 +25,8 @@
         <!-- <img class="logo" src="Images/figma/mushy.png"> -->
     </div>
     <canvas class="spores"></canvas>
+    <script src="anime.min.js"></script>
+    <script src="howler/dist/howler.js"></script>
+    <script src="psych.js"></script>
 </body>
 </html>
