added new icons

--- a/Psych/index.html
+++ b/Psych/index.html
@@ -24,6 +24,12 @@
         <button class="logo" onclick="logoClick()"><img src="Images/figma/mushy.png"></button>
         <!-- <img class="logo" src="Images/figma/mushy.png"> -->
     </div>
+    <div class="typethree">
+        <button class="type" onclick="typeClick()"><img src="Images/figma/3mushies.png"></button>
+    </div>
+    <div class="book">
+        <button class="history" onclick="historyClick()"><img src="Images/figma/historymush.png"></button>
+    </div>
     <canvas class="spores"></canvas>
     <script src="anime.min.js"></script>
     <script src="howler/dist/howler.js"></script>
