--- a/Psych/index.html
+++ b/Psych/index.html
@@ -11,25 +11,23 @@
     <!-- <audio loop="loop" autoplay="autoplay">
         <source src="audio/Plantasia.mp3" type="audio/mpeg" />
     </audio> -->
+        <div class="dogContainer">
+                <img id="dog" src="Images/figma/animal.png"/>
+                <img id="barb"  src="Images/figma/barbie_xan.png">
+        </div>
+        <div class="cakeContainer">
+            <img id="cake" src="Images/figma/food.png"/>
+        </div>
+        <div class="logoContainer">
+            <img id="logo" src="Images/figma/mushy.png"/>
+        </div>
+        <div class="typeContainer">
+            <img id="type" src="Images/figma/3mushies.png"/>
+        </div>
+        <div class="historyContainer">
+           <img id="history" src="Images/figma/historymush.png"/>
+        </div>
 
-    <div class="images">
-            <button class="dog" onclick="dogClick()"><img src="Images/figma/animal.png"></button>
-            <!-- <img class= 'dog' src="Images/figma/animal.png"> -->
-    </div>
-    <div class="next2">
-        <button class="cake" onclick="cakeClick()"><img src="Images/figma/food.png"></button>
-        <!-- <img class="cake" src="Images/figma/food.png"> -->
-    </div>
-    <div class="middle">
-        <button class="logo" onclick="logoClick()"><img src="Images/figma/mushy.png"></button>
-        <!-- <img class="logo" src="Images/figma/mushy.png"> -->
-    </div>
-    <div class="typethree">
-        <button class="type" onclick="typeClick()"><img src="Images/figma/3mushies.png"></button>
-    </div>
-    <div class="book">
-        <button class="history" onclick="historyClick()"><img src="Images/figma/historymush.png"></button>
-    </div>
     <canvas class="spores"></canvas>
     <script src="anime.min.js"></script>
     <script src="howler/dist/howler.js"></script>
